--- a/src/assets/styles/_categories.scss
+++ b/src/assets/styles/_categories.scss
@@ -4,9 +4,10 @@
 }
 #categories{
   padding: 60px 0 30px 0;
-}
-#categories .container{
-  padding: 40px 10px;
+
+  & .container{
+    padding: 40px 10px;
+  }
 }
 .cat-wrap--card{
   position: relative;
@@ -20,32 +21,38 @@
 }
 .cat-wrap--card---img{
   background: rgba(0, 0, 0, 0.5);
+
+  & img{
+    width: 100%;
+    height: auto;
+    transition: opacity 0.3s linear;
+    opacity: 0.5;
+  }
 }
-.cat-wrap--card---img img{
-  width: 100%;
-  height: auto;
-  transition: opacity 0.3s linear;
-  opacity: 0.5;
+.cat-wrap--card---text {
+
+  & a{
+    width: 100%;
+    color: $gold;
+    font-size: 25px;
+    font-family: "Playfair Display";
+    font-weight: 700;
+    font-style: normal;
+    text-transform: uppercase;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 1;
+    transform: translate3d(0,-50%,0);
+
+    &:hover{
+      text-decoration: none;
+      color: $gold;
+    }
+  }
 }
-.cat-wrap--card---text a{
-  width: 100%;
-  color: $gold;
-  font-size: 25px;
-  font-family: "Playfair Display";
-  font-weight: 700;
-  font-style: normal;
-  text-transform: uppercase;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  z-index: 1;
-  transform: translate3d(0,-50%,0);
-}
-.cat-wrap--card---text a:hover{
-  text-decoration: none;
-  color: $gold;
-}
+
 @media (max-width: 780px) {
   .cat-wrap--cars---text a{
     font-size: 17px;
@@ -64,14 +71,30 @@
     background: url("../../../public/img/cmob.jpg") center no-repeat;
     background-size: cover;
     height: calc(100vh - 72px - 68px);
-    //position: absolute;
-    //top: 64px;
-    //left: 0;
-    //right: 0;
+
+    @media screen and (max-width: 375px){
+      height: calc(100vh - 40px - 68px);
+    }
+    @media screen and (max-width: 360px){
+      height: calc(100vh - 20px - 25px);
+    }
+    @media screen and (max-width: 320px){
+      height: 100vh;
+    }
   }
   #categories .categories-mob--bac{
     background: rgba(0, 0, 0, 0.6);
     height: calc(100vh - 72px - 68px);
+
+    @media screen and (max-width: 375px){
+      height: calc(100vh - 40px - 68px);
+    }
+    @media screen and (max-width: 360px){
+      height: calc(100vh - 20px - 25px);
+    }
+    @media screen and (max-width: 320px){
+      height: 100vh;
+    }
 
     & h3 {
       padding-top: 40px;
@@ -96,29 +119,35 @@
     height: 80%;
     justify-content: space-evenly;
     padding-top: 30px;
+
+    & a{
+      width: 100%;
+      font-family: "Playfair Display";
+      font-style: normal;
+      font-size: 16px;
+      text-transform: uppercase;
+      text-align: center;
+      color: #ffffff;
+      padding: 15px 0;
+      position: relative;
+
+      &:nth-child(-n+8){
+        &:before{
+          display: block;
+          width: 100%;
+          margin: 0 auto;
+          content: '';
+          position: absolute;
+          bottom: 0;
+          border-bottom: 2px solid #ffffff;
+        }
+      }
+
+      &:hover{
+        text-decoration: none;
+        color: #ffffff;
+      }
+    }
   }
-  .categories-mob--wrap a{
-    width: 100%;
-    font-family: "Playfair Display";
-    font-style: normal;
-    font-size: 16px;
-    text-transform: uppercase;
-    text-align: center;
-    color: #ffffff;
-    padding: 15px 0;
-    position: relative;
-  }
-  .categories-mob--wrap a:nth-child(-n+8):before{
-    display: block;
-    width: 100%;
-    margin: 0 auto;
-    content: '';
-    position: absolute;
-    bottom: 0;
-    border-bottom: 2px solid #ffffff;
-  }
-  .categories-mob--wrap a:hover{
-    text-decoration: none;
-    color: #ffffff;
-  }
+
 }
