--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -278,6 +278,9 @@
         @media screen and (max-width: 425px){
           min-width: 325px;
         }
+        @media screen and (max-width: 414px){
+          min-width: 314px;
+        }
         @media screen and (max-width: 375px){
           min-width: 275px;
         }
